# Fuzzblitz

./: .gitignore  Cargo.toml  FINAL_SUMMARY.md  README.md  example_urls.txt  test_urls.txt
src/: logging.rs  main.rs
src/analyzer/: anomaly.rs  baseline.rs  mod.rs  pattern.rs  similarity.rs  vulnerability.rs
src/api/: endpoints.rs  methods.rs  mod.rs  rest.rs  swagger.rs
src/auth/: basic.rs  bearer.rs  digest.rs  jwt.rs  mod.rs  ntlm.rs
src/cache/: keys.rs  mod.rs  poisoning.rs
src/cli/: args.rs  banner.rs  mod.rs
src/config_loader/: defaults.rs  mod.rs  parser.rs  validator.rs
src/core/: config.rs  engine.rs  mod.rs  rate_limiter.rs  statistics.rs  stop_conditions.rs
src/cors/: bypass.rs  mod.rs  tester.rs
src/filters/: matcher.rs  mod.rs  response.rs
src/graphql/: introspection.rs  mod.rs  mutations.rs  queries.rs
src/headers/: fuzzer.rs  mod.rs  security.rs
src/history/: mod.rs  replay.rs  session.rs  storage.rs
src/input/: cmd_input.rs  encoder.rs  generator.rs  mod.rs  payloads.rs  url_list.rs  wordlist.rs
src/interactive/: commands.rs  console.rs  mod.rs
src/job/: manager.rs  mod.rs  queue.rs  task.rs
src/network/: client.rs  mod.rs  request_builder.rs  url_builder.rs
src/output/: format.rs  mod.rs  result.rs  writer.rs
src/param_miner/: common.rs  discovery.rs  mod.rs
src/plugin/: hooks.rs  loader.rs  manager.rs  mod.rs  registry.rs
src/redirect/: detector.rs  mod.rs  payloads.rs
src/runner/: executor.rs  mod.rs  parallel.rs  pipeline.rs  sequential.rs
src/scraper/: assets.rs  forms.rs  html.rs  (+2 more)
wordlists/: README.md
(+25 files in other folders)
