[package]
name = "fuzzblitz"
version = "2.0.0"
edition = "2021"
authors = ["ibrahimsql"]
description = "⚡ Lightning fast web fuzzer written in Rust - Speed, Power, Precision"
repository = "https://github.com/ibrahimsql/fuzzblitz"
license = "MIT"
keywords = ["fuzzer", "web", "security", "pentesting", "bugbounty"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies", "socks"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "3.2.16", features = ["derive"] }
colored = "2.0.0"
chrono = { version = "0.4.20", features = ["serde"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
futures = "0.3"
indicatif = "0.17"
url = "2.5"
csv = "1.3"
base64 = "0.21"
urlencoding = "2.1"
rand = "0.8"
md5 = "0.7"
